# omega7

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
include/: .omega_publisher.h.un~  omega_publisher.h  omega_publisher.h~
src/: .omega_engine_telemanipulation.cpp.un~  .omega_publisher.cpp.un~  .omega_publisher_qt1.cpp  omega7_deg.cpp  omega7_qt.cpp
